// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Store 1`] = `
<div
  class="col-5"
>
  <form
    class="form-inline"
  >
    <div
      class="form-group mx-sm-3"
    >
      <input
        required=""
        type="text"
        value=""
      />
    </div>
    <input
      class="btn btn-primary btn-sm"
      type="submit"
      value="Add"
    />
  </form>
</div>
`;

exports[`Store 2`] = `
<div
  class="col-5"
>
  <form
    class="form-inline"
  >
    <div
      class="form-group mx-sm-3"
    >
      <input
        required=""
        type="text"
        value="na-na"
      />
    </div>
    <input
      class="btn btn-primary btn-sm"
      type="submit"
      value="Add"
    />
  </form>
</div>
`;

exports[`Store 3`] = `
<div
  class="col-5"
>
  <form
    class="form-inline"
  >
    <div
      class="form-group mx-sm-3"
    >
      <input
        required=""
        type="text"
        value=""
      />
    </div>
    <input
      class="btn btn-primary btn-sm"
      type="submit"
      value="Add"
    />
  </form>
  <div
    class="mt-3"
  >
    <ul
      class="list-group"
    >
      <li
        class="list-group-item d-flex justify-content-end"
      >
        <button
          class="btn border-0 p-0 app-toggle-state mr-3"
        >
          -
        </button>
        <div
          class="mr-auto"
        >
          na-na
        </div>
        <button
          class="btn border-0 p-0 app-remove-task"
        >
          x
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Store 4`] = `
<div
  class="col-5"
>
  <form
    class="form-inline"
  >
    <div
      class="form-group mx-sm-3"
    >
      <input
        required=""
        type="text"
        value="another task"
      />
    </div>
    <input
      class="btn btn-primary btn-sm"
      type="submit"
      value="Add"
    />
  </form>
  <div
    class="mt-3"
  >
    <ul
      class="list-group"
    >
      <li
        class="list-group-item d-flex justify-content-end"
      >
        <button
          class="btn border-0 p-0 app-toggle-state mr-3"
        >
          -
        </button>
        <div
          class="mr-auto"
        >
          na-na
        </div>
        <button
          class="btn border-0 p-0 app-remove-task"
        >
          x
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Store 5`] = `
<div
  class="col-5"
>
  <form
    class="form-inline"
  >
    <div
      class="form-group mx-sm-3"
    >
      <input
        required=""
        type="text"
        value=""
      />
    </div>
    <input
      class="btn btn-primary btn-sm"
      type="submit"
      value="Add"
    />
  </form>
  <div
    class="mt-3"
  >
    <ul
      class="list-group"
    >
      <li
        class="list-group-item d-flex justify-content-end"
      >
        <button
          class="btn border-0 p-0 app-toggle-state mr-3"
        >
          -
        </button>
        <div
          class="mr-auto"
        >
          na-na
        </div>
        <button
          class="btn border-0 p-0 app-remove-task"
        >
          x
        </button>
      </li>
      <li
        class="list-group-item d-flex justify-content-end"
      >
        <button
          class="btn border-0 p-0 app-toggle-state mr-3"
        >
          -
        </button>
        <div
          class="mr-auto"
        >
          another task
        </div>
        <button
          class="btn border-0 p-0 app-remove-task"
        >
          x
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Store 6`] = `
<div
  class="col-5"
>
  <form
    class="form-inline"
  >
    <div
      class="form-group mx-sm-3"
    >
      <input
        required=""
        type="text"
        value=""
      />
    </div>
    <input
      class="btn btn-primary btn-sm"
      type="submit"
      value="Add"
    />
  </form>
  <div
    class="mt-3"
  >
    <ul
      class="list-group"
    >
      <li
        class="list-group-item d-flex justify-content-end"
      >
        <button
          class="btn border-0 p-0 app-toggle-state mr-3"
        >
          -
        </button>
        <div
          class="mr-auto"
        >
          na-na
        </div>
        <button
          class="btn border-0 p-0 app-remove-task"
        >
          x
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Store 7`] = `
<div
  class="col-5"
>
  <form
    class="form-inline"
  >
    <div
      class="form-group mx-sm-3"
    >
      <input
        required=""
        type="text"
        value=""
      />
    </div>
    <input
      class="btn btn-primary btn-sm"
      type="submit"
      value="Add"
    />
  </form>
  <div
    class="mt-3"
  >
    <ul
      class="list-group"
    >
      <li
        class="list-group-item d-flex justify-content-end"
      >
        <button
          class="btn border-0 p-0 app-toggle-state mr-3"
        >
          -
        </button>
        <div
          class="mr-auto"
        >
          <s>
            na-na
          </s>
        </div>
        <button
          class="btn border-0 p-0 app-remove-task"
        >
          x
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Store 8`] = `
<div
  class="col-5"
>
  <form
    class="form-inline"
  >
    <div
      class="form-group mx-sm-3"
    >
      <input
        required=""
        type="text"
        value=""
      />
    </div>
    <input
      class="btn btn-primary btn-sm"
      type="submit"
      value="Add"
    />
  </form>
  <div
    class="mt-3"
  >
    <ul
      class="list-group"
    >
      <li
        class="list-group-item d-flex justify-content-end"
      >
        <button
          class="btn border-0 p-0 app-toggle-state mr-3"
        >
          -
        </button>
        <div
          class="mr-auto"
        >
          na-na
        </div>
        <button
          class="btn border-0 p-0 app-remove-task"
        >
          x
        </button>
      </li>
    </ul>
  </div>
</div>
`;
